--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title><%= pageTitle %></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kyle Randolph</title>
+  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 </head>
 <body>
-  <h1>Welcome to the <%= pageTitle %> page!</h1>
-  <p>This is the home page.</p>
+  <div class="container">
+    <div class="pt-2 pb-2 border-bottom">
+        <a class="icon pl-2 pr-2 p-1  
+            float-right" href="#hamburger-icon" 
+            onclick="hamMenu()">
+
+            <i class="fa fa-bars"></i>
+        </a>
+        <a class="pt-2 pb-2 text-success 
+            text-decoration-none font-weight
+                    -bold" href="/"> Kyle Randolph Home
+        </a>
+    </div>
+    <div class="links nav flex-column d-none">
+        <a class="nav-link border-bottom" 
+            href="/"> Home </a>
+
+        <a class="nav-link border-bottom" 
+            href="/about"> About </a>
+
+        <a class="nav-link border-bottom" 
+            href="/contact"> Contact </a>
+    </div>
+</div>
+  <script src="/navs.js"></script>
 </body>
 </html>
