--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -17,9 +17,7 @@
 
             <i class="fa fa-bars"></i>
         </a>
-        <a class="pt-2 pb-2 text-success 
-            text-decoration-none font-weight
-                    -bold" href="/"> Kyle Randolph Home
+        <a class="pt-2 pb-2 text-decoration-none font-weight-bold">Contact
         </a>
     </div>
     <div class="links nav flex-column d-none">
@@ -32,6 +30,7 @@
         <a class="nav-link border-bottom" 
             href="/contact"> Contact </a>
     </div>
+  </div>
   <div class="container">
     <h1>Welcome to the <%= pageTitle %> page!</h1>
     <p>This is the Contact page.</p>
