--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
 </head>
 <body>
   <div class="container">
@@ -15,12 +14,9 @@
         <a class="icon pl-2 pr-2 p-1  
             float-right" href="#hamburger-icon" 
             onclick="hamMenu()">
-
             <i class="fa fa-bars"></i>
         </a>
-        <a class="pt-2 pb-2 text-success 
-            text-decoration-none font-weight
-                    -bold" href="/"> Kyle Randolph Home
+        <a class="pt-2 pb-2 text-decoration-none font-weight-bold"> Kyle Randolph Home
         </a>
     </div>
     <div class="links nav flex-column d-none">
@@ -33,7 +29,11 @@
         <a class="nav-link border-bottom" 
             href="/contact"> Contact </a>
     </div>
-</div>
+  </div>
+  <div class="container">
+    <h1>Welcome to my site!</h1>
+    <p>This page is a work in progress, so check back soon for more goodness.</p>
+  </div>
   <script src="/navs.js"></script>
 </body>
 </html>
