adding resume, updating formatting, adding favicon

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/styles.css">
@@ -21,14 +22,16 @@
         </a>
     </div>
     <div class="links nav flex-column d-none">
-        <a class="nav-link border-bottom" 
-            href="/"> Home </a>
-
-        <a class="nav-link border-bottom" 
-            href="/about"> About </a>
-
-        <a class="nav-link border-bottom" 
-            href="/contact"> Contact </a>
+      <a class="nav-link border-bottom" 
+          href="/"> Home </a>
+      <a class="nav-link border-bottom" 
+          href="/about"> About </a>
+      <a class="nav-link border-bottom" 
+          href="/contact"> Contact </a>
+      <a class="nav-link border-bottom" 
+          href="/projects"> Projects </a>
+      <a class="nav-link border-bottom" 
+          href="/resume"> Resume </a>
     </div>
   </div>
   <div class="container">
