--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kyle Randolph</title>
@@ -22,13 +23,15 @@
     <div class="links nav flex-column d-none">
         <a class="nav-link border-bottom" 
             href="/"> Home </a>
-
         <a class="nav-link border-bottom" 
             href="/about"> About </a>
-
         <a class="nav-link border-bottom" 
             href="/contact"> Contact </a>
-    </div>
+        <a class="nav-link border-bottom" 
+            href="/projects"> Projects </a>
+        <a class="nav-link border-bottom" 
+            href="/resume"> Resume </a>
+      </div>
   </div>
   <div class="container">
     <h1>Welcome to my site!</h1>
