--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -18,7 +18,7 @@
 
             <i class="fa fa-bars"></i>
         </a>
-        <a class="pt-2 pb-2 text-decoration-none font-weight-bold">About
+        <a class="pt-2 pb-2 text-decoration-none font-weight-bold">Projects
         </a>
     </div>
     <div class="links nav flex-column d-none">
@@ -36,7 +36,7 @@
   </div>
   <div class="container">
     <h1>Welcome to the <%= pageTitle %> page!</h1>
-    <p>This is the About page.</p>
+    <p>This is the Projects page.</p>
   </div>
   <script src="/navs.js"></script>
 </body>
