Adding about page and small update to home page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -35,8 +35,24 @@
     </div>
   </div>
   <div class="container">
-    <h1>Welcome to the <%= pageTitle %> page!</h1>
-    <p>This is the About page.</p>
+    <section id="about">
+      <h1>About Kyle Randolph</h1>
+      <p>Hey there! Thanks for dropping by. I'm Kyle, a technical and empathetic problem solver with a passion for innovation and customer-centric solutions.</p>
+      <h2>Who Am I?</h2>
+      <p>I thrive on tackling complex challenges and continuously expanding my skill set. As someone who deeply understands customer needs, I believe in creating meaningful and efficient solutions that make a difference.</p>
+      <h2>My Journey</h2>
+      <p>After obtaining my M.B.A. in Business Management, I embarked on a journey to blend my business acumen with a technical edge. I dived into the world of programming and databases, exploring languages like Python, GoLang, and JavaScript while mastering technologies like AWS, GCP, Docker, and more.</p>
+      <h2>Experience & Accomplishments</h2>
+      <p>In my previous role as a Product Manager & Escalations Engineer at Ethopass, I led the establishment of core processes, including Agile adoption and feature prioritization using WSJF. Additionally, I researched and implemented AWS-based solutions, enabling efficient contact form submissions.</p>
+      <p>At JumpCloud, I worked as a Software Engineer and T4 Escalation Engineer, honing my coding skills in Golang, JavaScript, and Python. I played a crucial role in identifying and resolving bugs and providing support to the Customer Support team. As a Product Manager, I designed strategic roadmaps, collaborated with cross-functional teams, and implemented vital security features.</p>
+      <h2>What I'm Up To</h2>
+      <p>Currently, I'm on a planned career break, dedicating time to enhance my coding knowledge and stay updated with the latest technologies.</p>
+      <h2>Why This Website?</h2>
+      <p>This website serves as my digital playground, where I share my experiences, thoughts, and technical insights. It allows me to connect with like-minded individuals, fellow learners, and industry professionals.</p>
+      <h2>Let's Connect</h2>
+      <p>I'm always excited to connect with others who are passionate about technology, problem-solving, and making a positive impact. Feel free to reach out to me on <a href="https://www.linkedin.com/in/randolphkyle/">LinkedIn</a> or through the contact form on this website.</p>
+      <p>Thank you for taking the time to get to know me better. I look forward to sharing and learning together on this exciting journey!</p>
+  </section>
   </div>
   <script src="/navs.js"></script>
 </body>
