--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,9 @@
   </div>
   <div class="container">
     <h1>Welcome to my site!</h1>
-    <p>This page is a work in progress, so check back soon for more goodness.</p>
+    <p>Thanks for taking the time to visit my website. If you would like to see examples of my work, 
+    please see my <a href="/projects">Projects</a> section. This page is a work in progress so check 
+    back soon for more updates!</p>
   </div>
   <script src="/navs.js"></script>
 </body>
